--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,22 +3,44 @@ en:
     home:
       title: "Ruby on Rails Tutorial Sample App"
       tit: "Ruby on Rails Tutorial"
-
+      hearl: "Michael Hartl"
       home: "Home"
       about: "About"
       help: "Help"
+      contact: "Contact"
+      new_rails: "http://news.railstutorial.org/"
+      log_in: "Log in"
+      numb_s: "#"
+      sign_up: "Sign up"
     url:
       rails: "http://www.railstutorial.org/"
       book: "http://www.railstutorial.org/book"
       help: "http://www.railstutorial.org/help"
       screen: "http://screencasts.railstutorial.org/"
+      michel: "http://www.michaelhartl.com/"
+      ruby_r: "http://rubyonrails.org/"
+      contact: "http://www.railstutorial.org/contact"
+      new_rails: "http://news.railstutorial.org/"
+    contact_app: "Contact the Ruby on Rails Tutorial about the sample
+       app at the"
+    contact_pa: "contact page"
+    id: "#logo"
     book: "book"
     and: "and"
     sreen: "screencast series"
     to_tech: "to teach web development with"
     sample: "This is the sample application for the tutorial."
-    sam_app: "sample application."
-    home_page: "This is the home page for the"
+    sam_app: "sample application"
+    home_h1: "Welcome to the Sample App"
+    home_help: "This is the home page for the"
     get_help: "Get help on the Ruby on Rails Tutorial at the"
     rails_help: "Rails Tutorial help page"
     to_get_help: "To get help on this sample app, see the"
+    new: "New"
+    sign_up: "Sign up now!"
+    alt_lo: "Rails logo"
+    sign_up_pa: "This will be a signup page for new users."
+    the: "The"
+    by: "by"
+  link:
+    rails_p: "rails.png"
