--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,5 +42,9 @@ en:
     sign_up_pa: "This will be a signup page for new users."
     the: "The"
     by: "by"
+    error: "error"
+    form_contain: "The form contains "
+    confirmation: "Confirmation"
+    crea_acco: "Create my account"
   link:
     rails_p: "rails.png"
